# Final-certification

./: .gitignore  README.md  pyproject.toml
recipe/main/: admin.py  forms.py  middlewares.py  models.py  urls.py
recipe/main/Templates_main/: detail.html  index.html  profile_rs_change.html
recipe/main/migration/: 0001_initial.py  0002_remove_advuser_is_activated.py  0003_category.py  0004_rs.py  0005_alter_rs_options_alter_rs_created_at.py
recipe/main/static_main/: style.css
recipe/recipe/: asgi.py  settings.py  wsgi.py
recipe/static/admin/css/: autocomplete.css  widgets.css
