[tool.poetry]
name = "finalexam"
version = "0.1.0"
description = ""
authors = ["Chesnokov M.A. <chesnokov_ma@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
python-dotenv = "^1.0.1"
pillow = "^10.2.0"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"